--- a/LTW/TP01/ComplexTable/table.html
+++ b/LTW/TP01/ComplexTable/table.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Table</title>
+    <link rel="stylesheet" href="style.css">
+
+</head>
 
 <body>
-<style>
-    table {
-        border-collapse: collapse;
-    }
 
-    th,
-    td {
-        border: 1px solid;
-        padding: 0.5em;
-    }
-</style>
-    <table border="1">
+    <table>
         <tr>
             <td colspan="2" rowspan="2">Student</td>
             <td colspan="4">Exam</td>
@@ -68,15 +66,18 @@
             <td>16.5</td>
             <td>17</td>
         </tr>
-        <td>80549063</td>
-        <td>Claire</td>
-        <td colspan="4"></td>
-        <td>50%</td>
-        <td>50%</td>
-        <td>50%</td>
-        <td>10.0</td>
-        <td>10.0</td>
-        <td>10</td>
+        <tr>
+
+            <td>80549063</td>
+            <td>Claire</td>
+            <td colspan="4"></td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>10.0</td>
+            <td>10.0</td>
+            <td>10</td>
+        </tr>
     </table>
 </body>
 
