--- a/LTW/TP01/OnlineNewspaper/article.html
+++ b/LTW/TP01/OnlineNewspaper/article.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Newspaper</title>
 </head>
 
 <body>
     <header>
-        <img src="https://picsum.photos/id/91/100/100">
-        <a href="main.html"><h1>Newspaper</a></h1>
+        <img alt="logo" src="https://picsum.photos/id/91/100/100">
+        <a href="main.html"><h1>Newspaper</h1></a>
     </header>
     <h2>Lorem Ipsum</h2>
     <h3>What is Lorem Ipsum?</h3>
@@ -22,7 +24,7 @@
         and more
         recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
-    <img src="https://picsum.photos/seed/picsum/300/200?grayscale">
+    <img alt="article image" src="https://picsum.photos/seed/picsum/300/200?grayscale">
     <h3>Where does it come from?</h3>
     <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
         literature
@@ -83,14 +85,13 @@
     </ul>
     <br>
     <h3>Leave your comment here!</h3>
-    <p>Username:</h5> <input type="text">
-    <br>
+    <p>Username:</p> <input type="text">
     <br>
     <textarea placeholder="Comment here"></textarea>
+    <br>
+    <footer>
+        <p>Anne Boyle, February 12th, 2006</p>
+        <p>Copyrightⓒ</p>
+    </footer>
 </body>
-<br>
-<footer>
-    <p>Anne Boyle, February 12th, 2006</p>
-    <p>Copyrightⓒ</p>
-</footer>
 </html>
