--- a/LTW/TP01/OnlineNewspaper/main.html
+++ b/LTW/TP01/OnlineNewspaper/main.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Newspaper</title>
 </head>
 
 <body>
     <header>
-        <img src="https://picsum.photos/id/91/100/100">
+        <img alt="logo" src="https://picsum.photos/id/91/100/100">
         <h1>Newspaper</h1>
     </header>
     <nav>
         <ul>
-            <li> <a href="section.html">Sports</li></a>
-            <li><a href="section.html">Food</li></a>
-            <li><a href="section.html">Entertainment</li></a>
-            <li><a href="section.html">Politics</li></a>
+            <li> <a href="section.html">Sports</a></li>
+            <li><a href="section.html">Food</a></li>
+            <li><a href="section.html">Entertainment</a></li>
+            <li><a href="section.html">Politics</a></li>
         </ul>
     </nav>
     <main>
@@ -23,7 +25,7 @@
             <li>
                 <h3>Article 1</h3>
 
-                <img src="https://picsum.photos/id/12/300/200">
+                <img alt="article image" src="https://picsum.photos/id/12/300/200">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's
                     standard
@@ -43,7 +45,7 @@
             <li>
                 <h3>Article 2</h3>
 
-                <img src="https://picsum.photos/id/15/300/200">
+                <img alt="article image" src="https://picsum.photos/id/15/300/200">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's
                     standard
@@ -62,7 +64,7 @@
             <li>
                 <h3>Article 3 </h3>
 
-                <img src="https://picsum.photos/seed/picsum/300/200">
+                <img alt="article image" src="https://picsum.photos/seed/picsum/300/200">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's
                     standard
@@ -82,10 +84,10 @@
 
         </ul>
     </main>
+    <footer>
+        <p>Copyrightⓒ</p>
+    
+    </footer>
 </body>
-<footer>
-    <p>Copyrightⓒ</p>
-
-</footer>
 
 </html>
